--- a/src/pages/MyOrdersDetails.module.css
+++ b/src/pages/MyOrdersDetails.module.css
@@ -14,10 +14,10 @@
 }
 
 .spinner {
-    border: 1px dashed #9747FF;
-    borderRadius: 5px;
-    padding: 20px;
-    width: 400px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .orderDetails {
