--- a/src/pages/MyOrdersDetails.module.css
+++ b/src/pages/MyOrdersDetails.module.css
@@ -21,7 +21,7 @@
 }
 
 .orderDetails {
-    background-color: var(--tgui--card_bg_color);
+    background-color: var(--tgui--bg_color);
     padding: 15px;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -33,4 +33,9 @@
     padding: 1rem;
     background: var(--tgui--bg_color);
     border-radius: 8px;
+}
+
+.centeredHeadline {
+    text-align: center;
+    flex-grow: 1;
 }
